# tools_adl

./: LICENSE.txt  README.md  SBOM-TRISTAN-0.3.spdx.json  SBOM-TRISTAN-0.4.spdx.json  SBOM.spdx.json  SCR_tools_adl.txt  pyproject.toml
docs/: README.md  ReleaseNotes.adoc
examples/TD/: README.md
examples/sail/: README.md
models/: README.md
models/adl/release/: rv32ic_release.adl.xml  rv32ic_zilsd_zclsd_release.adl.xml
models/adl/rv32i/: rv32i.adl.xml  rv32i_release.adl.xml
models/adl/zilsd/: rv32ic_zilsd_zclsd_release.adl.xml  rv32ic_zilsd_zcmlsd_release.adl.xml
tools/: adl_parser.py  config.py  config.txt  doc_gen.sh  files.py  legalDisclaimer.py  llvm_config.txt  main.py  make_td.py  registerInfo.py  sort_builtin.py  utils.py
tools/sail/: register_config.py  sail2adl.py
tools/testing/: generate_info.py  generate_inst_tests.py  generate_reference.py  lit_references_tester.sh  make_test.py  parse.py  parse_reference.py  utils.py
tools/testing/encoding/: generate_info.py  generate_inst_tests.py  generate_reference.py  info.py  lit.cfg  lit_references_tester.sh  llvm_lit_tester.sh  make_test.py  parse.py  parse_reference.py  tester_assembler.sh  tester_disassembler.sh  utils.py  write_refs.py  write_tests.py
tools/testing/intrinsics/: lit.cfg  lit_intrinsics_tester.sh
tools/testing/relocations/: __init__.py  fixup_llvm_lit_tester.sh  generate_fixup_reference.py  generate_fixup_tests.py  generate_reloc_reference.py  generate_reloc_tests.py  lit.cfg  make_reloc.py  parse_reloc.py  sym10.inc  tester_relocations.sh  utils_reloc.py  write_fixup_refs.py  (+3 more)
(+4 files in other folders)
