# Copyright 2023-2026 NXP 
# SPDX-License-Identifier: BSD-2-Clause

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tools_adl"
version = "0.5"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "num2words",
    "word2number",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.setuptools.package-data]
tools = ["config.txt", "llvm_config.txt"]